Mon Sep 27 14:03:19 2004  Shugo Maeda  <shugo@modruby.net>

	* version 1.2.4 released.

Mon Sep 27 14:01:17 2004  Shugo Maeda  <shugo@modruby.net>

	* mod_ruby.c: #include <crt_externs.h> for Mac OS X.

Mon Sep 27 01:30:37 2004  Shugo Maeda  <shugo@modruby.net>

	* version 1.2.3 released.

Sat Sep 25 12:58:27 2004  Shugo Maeda  <shugo@modruby.net>

	* mod_ruby.c (per_request_cleanup): call rb_gc().

Fri Sep 24 03:45:52 2004  Shugo Maeda  <shugo@modruby.net>

	* included libapreq.

Sun Sep 19 02:16:26 2004  Shugo Maeda  <shugo@modruby.net>

	* mod_ruby.c (mod_ruby_clearenv): use ruby_unsetenv().

Sat Sep 11 01:21:17 2004  Shugo Maeda  <shugo@modruby.net>

	* request.c (request_send_fd): fixed a bug really.

Fri Sep 10 21:28:52 2004  Shugo Maeda  <shugo@modruby.net>

	* mod_ruby.c (ruby_init_interpreter): set $stdout.sync to true.

Fri Sep 10 18:04:48 2004  Shugo Maeda  <shugo@modruby.net>

	* request.c (request_send_fd): fixed a bug with Apache2.

Sun Aug 29 10:56:53 2004  NISHI Takao  <zophos@Dadd9.com>

	* mod_ruby.c (mod_ruby_setenv): call ruby_unsetenv() before
	ruby_set_env().

Thu Aug 19 01:21:25 2004  Shugo Maeda  <shugo@modruby.net>

	* mod_ruby.c: do not use threads on prefork MPM.

Sat Aug 14 07:35:14 2004  Shugo Maeda  <shugo@modruby.net>

	* examples/ChangeLog: `Options ExecCGI' -> `Options +ExecCGI'.

Wed Aug 11 12:29:37 2004  Shugo Maeda  <shugo@modruby.net>

	* mod_ruby.c (ruby_child_cleanup): join ruby_thread.

Wed Aug 11 12:18:12 2004  Shugo Maeda  <shugo@modruby.net>

	* mod_ruby.c (ruby_child_cleanup): ignore SIGTERM.

Mon Aug  9 16:15:59 2004  Shugo Maeda  <shugo@modruby.net>

	* version 1.2.2 released.

Mon Aug  9 15:44:09 2004  Shugo Maeda  <shugo@modruby.net>

	* mod_ruby.c (ruby_child_init): wait until ruby_is_running is
	set to 1.

Sun Aug  8 08:03:54 2004  Shugo Maeda  <shugo@modruby.net>

	* version 1.2.1 released.

Sun Aug  8 07:41:03 2004  Shugo Maeda <shugo@modruby.net>

	* mod_ruby.c (ruby_child_init): added new handler