@@ -1,3 +1,7 @@
+Fri Oct 15 02:08:33 2004  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* apachelib.c: added new exception Apache::AprError.
+
 Mon Sep 27 14:03:19 2004  Shugo Maeda  <shugo@modruby.net>
 
 	* version 1.2.4 released.
